<resources>
    <string name="app_name">Cars</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cars_name">Car Model Name</string>
    <string name="cars_year">Year</string>
    <string name="cars_engine_type">Type</string>
    <string name="cars_engine_code">Engine Code</string>
    <string name="cars_engine_layout">Layout</string>
    <string name="cars_engine_power">Power</string>
    <string name="cars_engine_torque">Torque</string>
    <string name="cars_maker">Maker</string>
    <string name="car_image">Car Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_about">About</string>
    <string name="about_name">Hammam Afiq Murtadho</string>
    <string name="about_email">hammam.afiq277@gmail.com</string>
    <string name="about_phone_number">+628818606592</string>
</resources>