<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile_About"
            android:layout_width="match_parent"
            android:layout_height="@dimen/photo_height"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            tools:src="@drawable/profile_photo"
            android:contentDescription="@string/car_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvName_About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/about_name" />

            <TextView
                android:id="@+id/tvEmail_About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/about_email" />

            <TextView
                android:id="@+id/tvPhoneNum_About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/about_phone_number" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:lottie_rawRes="@raw/party_penguin"
                app:lottie_autoPlay="true"
                app:lottie_speed="1.0"
                app:lottie_loop="true"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>