<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    tools:context=".ui.components.CarsRowItem">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/item_car_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        app:riv_corner_radius="10dp"
        tools:src="@android:color/darker_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCarModel_Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/cars_name" />

        <TextView
            android:id="@+id/detail_car_year_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCarModel_Detail"
            tools:text="@string/cars_year" />

        <TextView
            android:id="@+id/tvCarYear_Detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/detail_car_year_label"
            app:layout_constraintTop_toBottomOf="@id/tvCarModel_Detail"
            tools:text="@string/cars_engine_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>