<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:elevation="4dp"
        app:title="@string/title_activity_detail"
        app:navigationIcon="@drawable/abc_vector_test"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        app:popupTheme="@style/Theme.AppCompat.DayNight"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_below="@id/toolbar_Detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCar_Detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/car_photo_height"
                android:scaleType="centerCrop"
                android:src="@drawable/porsche_macan_s_2019"
                android:contentDescription="@string/car_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvCarModel_Detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/cars_name" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:stretchColumns="2">

                    <TableRow android:paddingTop="6dp">

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/detail_text_width"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/cars_maker" />

                            <TextView
                                android:id="@+id/tvCarMaker_Detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="Porsche" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/detail_text_width"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/cars_year" />

                            <TextView
                                android:id="@+id/tvCarYear_Detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="2003" />

                        </LinearLayout>
                    </TableRow>

                    <TableRow android:paddingTop="6dp">

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/detail_text_width"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/cars_engine_type" />

                            <TextView
                                android:id="@+id/tvCarEngineType_Detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="Gasoline" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/detail_text_width"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/cars_engine_code" />

                            <TextView
                                android:id="@+id/tvCarEngineCode_Detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="EA839" />

                        </LinearLayout>
                    </TableRow>
                    <TableRow android:paddingTop="6dp">

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/detail_text_width"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/cars_engine_layout" />

                            <TextView
                                android:id="@+id/tvCarEngineLayout_Detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="V6" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/detail_text_width"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/cars_engine_power" />

                            <TextView
                                android:id="@+id/tvCarEnginePower_Detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="349 HP" />

                        </LinearLayout>
                    </TableRow>
                    <TableRow android:paddingTop="6dp">

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/detail_text_width"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/cars_engine_torque" />

                            <TextView
                                android:id="@+id/tvCarEngineTorque_Detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                tools:text="480 N.m" />

                        </LinearLayout>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>